--- a/docs/mobile-sdk/integration-guide/ios-integration-guide.mdx
+++ b/docs/mobile-sdk/integration-guide/ios-integration-guide.mdx
@@ -57,20 +57,20 @@ The examples below show the integration of the BlockID SDK into a new iOS projec
 - Choose *Single View Application* template
 - Press *Next*
 
-import iOS3 from '../assets/iOS-3.png';
+import iOS3 from './assets/iOS-3.png';
 <img src={iOS3} alt='xcode menu' />
 
 - We are using **BlockID Demo** for our *Product Name* 
 - Leave all the other settings as default
 
-import iOS4 from '../assets/iOS-4.png';
+import iOS4 from './assets/iOS-4.png';
 <img src={iOS4} alt='project settings' />
 
 - Press *Next* and select a location to save your project
 
 - Press *Create*, and the project will be opened as shown below
 
-import iOS7 from '../assets/iOS-7.png';
+import iOS7 from './assets/iOS-7.png';
 <img src={iOS3} alt='xcode project' />
 
 ### Step 2: Setup CocoaPods
@@ -85,7 +85,7 @@ Installing the BlockID iOS SDK via <a href='http://cocoapods.org/' target='_blan
 sudo gem install cocoapods
 ```
 
-import iOS11 from '../assets/iOS-11.png';
+import iOS11 from './assets/iOS-11.png';
 <img src={iOS11} alt='install cocoapods' />
 
 #### 2.2 Construct the Podfile
@@ -101,7 +101,7 @@ touch Podfile
 
 - Confirm that the `Podfile` was created by navigating to the BlockID Demo root
 
-import iOS12 from '../assets/iOS-12.png';
+import iOS12 from './assets/iOS-12.png';
 <img src={iOS12} alt='Podfile' />
 
 ### Step 3: Add BlockID SDK
@@ -134,7 +134,7 @@ pod install
 All BlockID SDK dependencies will be installed at this time
 :::
 
-import iOS14 from '../assets/iOS-14.png';
+import iOS14 from './assets/iOS-14.png';
 <img src={iOS14} alt='Install Podfile' />
 
 #### 3.2 Manual Integration
@@ -152,28 +152,28 @@ git clone https://github.com/1KBlockID/ios-blockidsdk.git
 ``` 
 - Copy the entire `BlockIDSDK.framework` folder to your *BlockID Demo* root directory
 
-import iOS17 from '../assets/iOS-17.png';
+import iOS17 from './assets/iOS-17.png';
 <img src={iOS17} alt='BlockID SDK.framework' />
 
 - Using `Finder`, double-click the `BlockID Demo.xcworkspace` file in the same directory 
 
 - `Xcode` will open. Select *BlockID Demo* under *Targets* and select *General -> Frameworks, Libraries and Embedded Content*
 
-import iOS15 from '../assets/iOS-15.png';
+import iOS15 from './assets/iOS-15.png';
 <img src={iOS15} alt='Target' />
 
 - Click *+* to add `BlockIDSDK.framework`
 - Once the framework is added, select *Embed & Sign* for `BlockIDSDK.framework`
 
-import iOS18 from '../assets/iOS-18.png';
+import iOS18 from './assets/iOS-18.png';
 <img src={iOS18} alt='Embed and Sign' />
 
 - The BlockID SDK uses <a href='https://developer.apple.com/documentation/cryptotokenkit' target='_blank'>CryptoTokenKit.framework</a>. The framework must be linked as *Optional* in the application target *Build Phase*
 
-import iOS20 from '../assets/iOS-20.png';
+import iOS20 from './assets/iOS-20.png';
 <img src={iOS20} alt='' />
 
-import iOS21 from '../assets/iOS-21.png';
+import iOS21 from './assets/iOS-21.png';
 <img src={iOS21} alt='' />
 
 ##### 3.2.2 Adding required iOS libraries 
@@ -222,7 +222,7 @@ To install all the dependent pods, `cd` to the BlockID Demo root directory using
 pod install 
 ```
 
-import iOS19 from '../assets/iOS-19.png';
+import iOS19 from './assets/iOS-19.png';
 <img src={iOS19} alt='additional pods' />
 
 ### Step 4: Enable Bitcode
