--- a/docs/mobile-sdk/integration-guide/ios-integration-guide.mdx
+++ b/docs/mobile-sdk/integration-guide/ios-integration-guide.mdx
@@ -60,6 +60,10 @@ The examples below show the integration of the BlockID SDK into a new iOS projec
 import iOS3 from './assets/iOS-3.png';
 <img src={iOS3} alt='xcode menu' />
 
+import OTPSMS from './assets/otp1.png'
+<img src={OTPSMS} alt="OTP SMS" width='250' />
+
+
 - We are using **BlockID Demo** for our *Product Name* 
 - Leave all the other settings as default
 
