--- a/docs/mobile-sdk/integration-guide/ios-integration-guide.mdx
+++ b/docs/mobile-sdk/integration-guide/ios-integration-guide.mdx
@@ -57,25 +57,21 @@ The examples below show the integration of the BlockID SDK into a new iOS projec
 - Choose *Single View Application* template
 - Press *Next*
 
-import iOS3 from '@site/static/img/iOS-3.png';
-<img src={iOS3} alt='xcode menu' />
+<img src={require('@site/static/img/iOS-3.png').default} />
 
-import OTPSMS from '@site/static/img/otp1.png'
-<img src={OTPSMS} alt="OTP SMS" width='250' />
 
 
 - We are using **BlockID Demo** for our *Product Name* 
 - Leave all the other settings as default
 
-import iOS4 from '@site/static/img/iOS-4.png';
-<img src={iOS4} alt='project settings' />
+<img src={require('@site/static/img/iOS-4.png').default} />
+
 
 - Press *Next* and select a location to save your project
 
 - Press *Create*, and the project will be opened as shown below
 
-import iOS7 from '@site/static/img/iOS-7.png';
-<img src={iOS3} alt='xcode project' />
+<img src={require('@site/static/img/iOS-7.png').default} />
 
 ### Step 2: Setup CocoaPods
 
@@ -89,8 +85,8 @@ Installing the BlockID iOS SDK via <a href='http://cocoapods.org/' target='_blan
 sudo gem install cocoapods
 ```
 
-import iOS11 from '@site/static/img/iOS-11.png';
-<img src={iOS11} alt='install cocoapods' />
+<img src={require('@site/static/img/iOS-11.png').default} />
+
 
 #### 2.2 Construct the Podfile
 
@@ -105,8 +101,7 @@ touch Podfile
 
 - Confirm that the `Podfile` was created by navigating to the BlockID Demo root
 
-import iOS12 from '@site/static/img/iOS-12.png';
-<img src={iOS12} alt='Podfile' />
+<img src={require('@site/static/img/iOS-12.png').default} />
 
 ### Step 3: Add BlockID SDK
 
@@ -138,8 +133,8 @@ pod install
 All BlockID SDK dependencies will be installed at this time
 :::
 
-import iOS14 from '@site/static/img/iOS-14.png';
-<img src={iOS14} alt='Install Podfile' />
+<img src={require('@site/static/img/iOS-14.png').default} />
+
 
 #### 3.2 Manual Integration
 
@@ -156,29 +151,24 @@ git clone https://github.com/1KBlockID/ios-blockidsdk.git
 ``` 
 - Copy the entire `BlockIDSDK.framework` folder to your *BlockID Demo* root directory
 
-import iOS17 from '@site/static/img/iOS-17.png';
-<img src={iOS17} alt='BlockID SDK.framework' />
+<img src={require('@site/static/img/iOS-17.png').default} />
 
 - Using `Finder`, double-click the `BlockID Demo.xcworkspace` file in the same directory 
 
 - `Xcode` will open. Select *BlockID Demo* under *Targets* and select *General -> Frameworks, Libraries and Embedded Content*
 
-import iOS15 from '@site/static/img/iOS-15.png';
-<img src={iOS15} alt='Target' />
+<img src={require('@site/static/img/iOS-15.png').default} />
 
 - Click *+* to add `BlockIDSDK.framework`
 - Once the framework is added, select *Embed & Sign* for `BlockIDSDK.framework`
 
-import iOS18 from '@site/static/img/iOS-18.png';
-<img src={iOS18} alt='Embed and Sign' />
+<img src={require('@site/static/img/iOS-18.png').default} />
 
 - The BlockID SDK uses <a href='https://developer.apple.com/documentation/cryptotokenkit' target='_blank'>CryptoTokenKit.framework</a>. The framework must be linked as *Optional* in the application target *Build Phase*
 
-import iOS20 from '@site/static/img/iOS-20.png';
-<img src={iOS20} alt='' />
+<img src={require('@site/static/img/iOS-20.png').default} />
 
-import iOS21 from '@site/static/img/iOS-21.png';
-<img src={iOS21} alt='' />
+<img src={require('@site/static/img/iOS-21.png').default} />
 
 ##### 3.2.2 Adding required iOS libraries 
 
@@ -226,8 +216,7 @@ To install all the dependent pods, `cd` to the BlockID Demo root directory using
 pod install 
 ```
 
-import iOS19 from '@site/static/img/iOS-19.png';
-<img src={iOS19} alt='additional pods' />
+<img src={require('@site/static/img/iOS-19.png').default} />
 
 ### Step 4: Enable Bitcode
 
