--- a/docs/idverify/verification-concepts.mdx
+++ b/docs/idverify/verification-concepts.mdx
@@ -10,20 +10,9 @@ import IdVerify from "./assets/idverify.png"
 
 # Verification Concepts 
 
-export const Highlight = ({children, color}) => (
-  <span
-    style={{
-      backgroundColor: color,
-      borderRadius: '6px',
-      fontSize: '28px',
-      color: '#fff',
-      padding: '0.2rem',
-    }}>
-    {children}
-  </span>
-);
-
-#### <Highlight color="#d62718">COMING SOON</Highlight>
+:::tip
+Trials for ID Verify are coming soon. Please contact support@1kosmos.com for API details
+:::
 
 BlockID identity verification performs single-source KYC and anti-money laundering verification, delivering a one-stop compliance solution to customers and developers. We combine digital identity checks with reports from credit bureaus, eKYC verifiers, DMVs, and global watchlist data to deliver comprehensive one-stop identity verification with a bring-your-own KYC provider model.
 
