--- a/docs/idverify/face-liveness.mdx
+++ b/docs/idverify/face-liveness.mdx
@@ -11,20 +11,11 @@ import TabItem from "@theme/TabItem";
 # Face Liveness Verification
 
 
-export const Highlight = ({children, color}) => (
-  <span
-    style={{
-      backgroundColor: color,
-      borderRadius: '6px',
-      fontSize: '28px',
-      color: '#fff',
-      padding: '0.2rem',
-    }}>
-    {children}
-  </span>
-);
+:::tip
+Trials for ID Verify are coming soon. Please contact developer@1kosmos.com for API details
+:::
 
-#### <Highlight color="#d62718">COMING SOON</Highlight>
+
 
 ### Parameters
 
@@ -246,6 +237,21 @@ The user is not authorized to make this request. Please contact your tenant comm
 The user does not have access permission to make this request. Please contact your tenant community administrator    
 
 </TabItem>
+
+
+<TabItem value="404" Label="404">
+
+```jsx title="404" Label="404"
+{
+  "code": 404,
+  "message": "Verification config not found."
+}
+```
+
+The `dvcID` verification config identifier could not be found. Please check your request. 
+
+</TabItem>
+
 
 <TabItem value="500" Label="500">
 
