--- a/docs/webauthn/webauthn.mdx
+++ b/docs/webauthn/webauthn.mdx
@@ -16,13 +16,15 @@ import BrowserWindow from "@site/src/components/BrowserWindow";
 
 After logging in initially, users can register a compatible FIDO2 device to their account to act as an authenticator. This can be a security key, such as a YubiKey, a mobile device, or device biometrics, such as TouchID. 
 
-import WebFido from "./assets/webfido1.png";
-<img src={WebFido} alt="mobile fido" />
+
+
+<img src={require('@site/static/img/webfido1.png').default} />
+
 
 After registering an authenticator, users can their enrolled device to authenticate their account whenever additional security is needed, such as during user login.
 
-import MobileFido from "./assets/mobilefido2.png";
-<img src={MobileFido} alt="mobile fido" />
+<img src={require('@site/static/img/mobilefido2.png').default} />
+
 
 
 
