--- a/docs/webauthn/webauthn.mdx
+++ b/docs/webauthn/webauthn.mdx
@@ -18,13 +18,12 @@ After logging in initially, users can register a compatible FIDO2 device to thei
 
 
 
-<img src={require('@site/static/img/webfido1.png').default} />
+<img src={require('@site/static/img/webfido1.png').default} height="250" />
 
 
 After registering an authenticator, users can their enrolled device to authenticate their account whenever additional security is needed, such as during user login.
 
-<img src={require('@site/static/img/mobilefido2.png').default} />
-
+<img src={require('@site/static/img/mobilefido2.png').default} height="450" />
 
 
 
