--- a/docs/webauthn/webauthn.mdx
+++ b/docs/webauthn/webauthn.mdx
@@ -10,6 +10,10 @@ import BrowserWindow from "@site/src/components/BrowserWindow";
 
 # WebAuthn 
 
+
+We've provided an <a href="/devportal/demo" target="_blank"> example application</a> where users can test webauthn functionality. Users can register a FIDO device, and then use that device to authenticate. 
+
+
 <a href="https://fidoalliance.org/fido2/fido2-web-authentication-webauthn/" target="_blank">WebAuthn</a> allows websites and applications to add FIDO-based authentication on supported browsers and platforms, allowing users to authenticate with built-in biometrics, mobile devices, and security keys. This enables a smoother login experience for your users while also providing more security over passwords alone. 
 
 ## **How it Works**
