--- a/docs/webauthn/webauthn.mdx
+++ b/docs/webauthn/webauthn.mdx
@@ -7,12 +7,20 @@ id: webauthn
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 import BrowserWindow from "@site/src/components/BrowserWindow";
+import Webfido1 from "./assets/webfido1.png";
+import Mobilefido2 from "./assets/mobilefido2.png";
+
 
 # WebAuthn 
 
 
-We've provided an <a href="/devportal/demo" target="_blank"> example application</a> where users can test webauthn functionality. Users can register a FIDO device, and then use that device to authenticate. 
+:::tip
+**Please Note:**
 
+We've provided an <a href="/devportal/demo" target="_blank"> example application</a> where users can test webauthn functionality. Users can register a FIDO device, and then use that device to authenticate. 
+:::
+
+<br />
 
 <a href="https://fidoalliance.org/fido2/fido2-web-authentication-webauthn/" target="_blank">WebAuthn</a> allows websites and applications to add FIDO-based authentication on supported browsers and platforms, allowing users to authenticate with built-in biometrics, mobile devices, and security keys. This enables a smoother login experience for your users while also providing more security over passwords alone. 
 
@@ -21,13 +29,12 @@ We've provided an <a href="/devportal/demo" target="_blank"> example application
 After logging in initially, users can register a compatible FIDO2 device to their account to act as an authenticator. This can be a security key, such as a YubiKey, a mobile device, or device biometrics, such as TouchID. 
 
 
-
-<img src={require('@site/static/img/webfido1.png').default} height="250" />
+<img src={Webfido1} height="250" />
 
 
 After registering an authenticator, users can their enrolled device to authenticate their account whenever additional security is needed, such as during user login.
 
-<img src={require('@site/static/img/mobilefido2.png').default} height="450" />
+<img src={Mobilefido2} height="450" />
 
 
 
