--- a/docs/webauthn/webauthn-authentication.mdx
+++ b/docs/webauthn/webauthn-authentication.mdx
@@ -111,7 +111,7 @@ Once the device authentication options have been returned you have the necessary
 
 ```jsx
 {
-	"rawId": "string",							
+	"rawId": "<raw ID>",							
 	"response": {							
 			"authenticatorData": "<authenticaton result data>",
 			"signature": "<authenticator signatute>",
